--- a/src/Components/Layout/Footer/style.css
+++ b/src/Components/Layout/Footer/style.css
@@ -1,14 +1,18 @@
 
 .main {
-  background-color:#521751;
-  border-top: 1px solid #E7E7E7;
+  background-color:#6D2C5F;
+  border-top: 1px solid rgb(253, 253, 253);
   text-align: center;
   padding: 20px;
   position: fixed;
+  z-index: 1201;
   left:0;
   bottom:0;
   height:60px;
   width:100%;
+  /* -webkit-box-shadow: 0px -3px 4px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px -3px 4px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px -3px 4px 0px rgba(0,0,0,0.75); */
 }
 
 .phantom {
