--- a/src/Components/Common/CardDisplay/index.css
+++ b/src/Components/Common/CardDisplay/index.css
@@ -28,13 +28,13 @@ body {
     color: white; }
   
   .nav a.active {
-    background-color: #6C2A57;
+    background-color: #61DAFB;
     color: #222; }
   
-  section {
+  /* section {
     padding: 20px 0;
     max-width: 600px;
-    margin: 0 auto; }
+    margin: 0 auto; } */
   
   /* #endregion */
   /* #region Card */
@@ -154,205 +154,6 @@ body {
     .cards-slider.active-slide-4 #card-4 .details {
       opacity: 1; }
   
-  .cards-slider.active-slide-5 #card-5 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-5 #card-5 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-6 #card-6 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-6 #card-6 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-7 #card-7 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-7 #card-7 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-8 #card-8 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-8 #card-8 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-9 #card-9 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-9 #card-9 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-10 #card-10 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-10 #card-10 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-11 #card-11 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-11 #card-11 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-12 #card-12 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-12 #card-12 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-13 #card-13 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-13 #card-13 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-14 #card-14 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-14 #card-14 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-15 #card-15 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-15 #card-15 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-16 #card-16 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-16 #card-16 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-17 #card-17 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-17 #card-17 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-18 #card-18 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-18 #card-18 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-19 #card-19 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-19 #card-19 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-20 #card-20 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-20 #card-20 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-21 #card-21 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-21 #card-21 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-22 #card-22 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-22 #card-22 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-23 #card-23 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-23 #card-23 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-24 #card-24 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-24 #card-24 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-25 #card-25 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-25 #card-25 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-26 #card-26 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-26 #card-26 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-27 #card-27 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-27 #card-27 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-28 #card-28 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-28 #card-28 .details {
-      opacity: 1; }
-  
-  .cards-slider.active-slide-29 #card-29 {
-    opacity: 1;
-    transform: scale(1);
-    background-color: #f3f3f3;
-    border-color: #f3f3f3; }
-    .cards-slider.active-slide-29 #card-29 .details {
-      opacity: 1; }
   
   .col {
     height: 264px;
@@ -381,7 +182,7 @@ body {
       display: block;
       width: 100%;
       height: 264px;
-      outline: 5px solid #6C2A57;
+      outline: 3px solid #6C2A57;
       position: absolute;
       top: 0;
       left: 0; }
